--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </header>
 
         <div class="container">
-            <img src= "./images/profile.jpg" alt="Profile Photo">
+            <img src= "./images/profile.png" alt="Profile Photo">
             <h1>Raghav Kaashyap</h1>
             <p style="font-family: 'Courier New', Courier, monospace; color: brown">Full Stack Developer</p>
             <p>
