--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Raghav Kaashyap</title>
         <link rel="stylesheet" href="./styles.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
     </head>
     <body>
@@ -24,6 +25,9 @@
             <p>You can reach me at raghavk@iastate.edu</p>
         </div>
         <footer>
+            <p>Connect with me on:</p>
+            <a href="https://www.linkedin.com/in/raghav-kaashyap-136445237/" target="_blank"><i class="fa-brands fa-linkedin-in" style="color: #008cb4;"></i></a>
+            <a href="https://github.com/raghavkaashyap" target="_blank"><i class="fa-brands fa-github" style="color: #008cb4;"></i></a>
             <p>&copy; 2024 Raghav Kaashyap</p>
         </footer>
 
