--- a/projects.html
+++ b/projects.html
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Raghav Kaashyap</title>
         <link rel="stylesheet" href="./styles.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
         <style>
             .container{
                 max-width: 960px;
@@ -16,11 +17,13 @@
                 margin-bottom: 20px;
                 border: 1px solid #ccc;
                 padding: 20px;
+                border-radius: 5px;
             }
             .project2{
                 margin-bottom: 20px;
                 border: 1px solid #ccc;
                 padding: 20px;
+                border-radius: 5px;
             }
         </style>
 
@@ -61,6 +64,9 @@
                 </div>
             </div>
             <footer>
+                <p>Connect with me on:</p>
+                <a href="https://www.linkedin.com/in/raghav-kaashyap-136445237/" target="_blank"><i class="fa-brands fa-linkedin-in" style="color: #008cb4;"></i></a>
+                <a href="https://github.com/raghavkaashyap" target="_blank"><i class="fa-brands fa-github" style="color: #008cb4;"></i></a>
                 <p>&copy; 2024 Raghav Kaashyap</p>
             </footer>
     </body>
